--- a/app/globals.css
+++ b/app/globals.css
@@ -8,13 +8,10 @@ body {
 
 
 .lds-ring {
-  /* display: inline-block; */
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  /* width: 24px; */
-  /* height: 24px; */
 }
 
 .lds-ring div {
@@ -23,7 +20,6 @@ body {
   position: absolute;
   width: 20px;
   height: 20px;
-  /* margin: 8px; */
   border: 3px solid #fff;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -50,4 +46,31 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.ham-menu-active {
+  overflow: hidden;
+}
+
+.ham-menu-active .mobile-navigation {
+  position: absolute;
+  top: 60px;
+  right: 0;
+  background-color: #333333;
+  width: 100%;
+  height: calc(100vh - 60px);
+  border-top: 1px solid #4b5563;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.ham-menu-active .mobile-navigation a {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  margin: 10px 0;
 }
