working on responsivity and adjusting colors for theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,38 +6,6 @@ body {
   scroll-behavior: smooth;
 }
 
-
-.lds-ring {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.lds-ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #0EA5E9 transparent transparent transparent;
-}
-
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
-
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
@@ -52,18 +20,27 @@ body {
   overflow: hidden;
 }
 
+.dark .ham-menu-active .mobile-navigation {
+  background-color: #333333;
+  color: #FFFFFF;
+}
+
+.light .ham-menu-active .mobile-navigation {
+  background-color: #FFFFFF;
+  color: #333333;
+}
+
+
 .ham-menu-active .mobile-navigation {
   position: absolute;
   top: 60px;
-  right: 0;
-  background-color: #333333;
+  left: 0%;
   width: 100%;
   height: calc(100vh - 60px);
-  border-top: 1px solid #4b5563;
   margin: 0;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 12px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -73,4 +50,18 @@ body {
   text-align: center;
   font-size: 24px;
   margin: 10px 0;
+}
+
+.activeLink {
+  color: red;
+}
+
+a:focus,
+button:focus {
+  outline: none;
+}
+
+.leaflet-container {
+  z-index: 0;
+  border-radius: 6px;
 }
