--- a/app/components/Header/HamburgerMenu.module.scss
+++ b/app/components/Header/HamburgerMenu.module.scss
@@ -7,18 +7,13 @@
   height: 36px;
   padding: 6px 6px;
   border-radius: 4px;
-  background: #52525b;
   cursor: pointer;
   transition: color 0.15s ease-in-out;
-}
-.hamburgerMenu:hover {
-  background-color: #3f3f46;
 }
 
 .hamburgerMenu > span {
   width: 100%;
   height: 3px;
-  background: white;
   border-radius: 5px;
   transition: all 0.15s ease-in-out;
 }
@@ -29,16 +24,15 @@
 }
 
 .active {
+  background-color: red;
   border-radius: 50%;
   & .line1 {
-    // transform-origin: center left;
     transform: rotate(45deg) translate(8px, 8px);
   }
   & .line2 {
     width: 0;
   }
   & .line3 {
-    // transform-origin: center left;
     transform: rotate(-45deg) translate(7px, -7px);
   }
 }
